@@ -1,6 +1,9 @@
                     Changes made to Pyjamas since 0.7
                     ---------------------------------
-
+ 
+ * Fix getWidget problem with HTMLTable under pyjd on Windows (mshtml,
+   fixes Issue 493, contributed by Phil Charlesworth
+   
  * Add parsing of XML documents under pyjd on Windows (mshtml),
    fixes Issue 481, contributed by Phil Charlesworth
    
